[package]
name = "ledger-lint"
version = "0.1.0"
edition = "2021"
authors = ["Severin Siffert <severin@siffert.org>"]
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
clap = { version = "3.0.7", features = ["derive"] }
clap_complete = {version = "3.0.6"}
regex = "1"

[build-dependencies]
clap = { version = "3.0.7", features = ["derive"] }
clap_complete = {version = "3.0.6"}

[[bin]]
name = "ledgerlint"
path = "src/main.rs"