[package]
name = "ledger-lint"
version = "0.1.0"
edition = "2021"
authors = ["Severin Siffert <severin@siffert.org>"]
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
clap = { version = "3.0.7", features = ["derive"] }
regex = "1"

[[bin]]
name = "ledgerlint"
path = "src/main.rs"