[package]
name = "ledger-lint"
version = "0.1.0"
edition = "2021"
authors = ["Severin Siffert <severin@siffert.org>"]
rust-version = "1.58.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
nom = "7.1.3"
regex = "1.7.2"

[[bin]]
name = "ledgerlint"
path = "src/main.rs"